Fix font size issue on small devices (bug14)

--- a/officechampion/static/css/style.css
+++ b/officechampion/static/css/style.css
@@ -19,6 +19,7 @@ main {
 /* Font Settings */
 h1 {
     font-weight: 700;
+    font-size: 3em
 }
 
 h2 {
